start on index page

--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -40,6 +40,8 @@
       </div>
     </nav>
 
+    <div class="content"></div>
+
     <div class="footer">
       <div class="copyright-container container">
         <div class="copyright-left">
