--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -65,6 +65,41 @@ body {
   -ms-transition: 0.5s;
   transition: 0.5s;
 }
-body {
-  min-height: 2000px;
+
+.gdlr-session-counter-item {
+  text-align: center;
+}
+
+.thumbnail {
+  background-color: #000;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
+    color: #fff;
+}
+
+.gdlr-session-counter-item .session-counter-block.gdlr-block-day {
+    opacity: 0.95;
+}
+.gdlr-session-counter-item .session-counter-block {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
+    color: #fff;
+}
+.gdlr-session-counter-item .session-counter-block {
+    border-radius: 5px;
+    display: inline-block;
+    margin: 0 10px;
+    text-align: center;
+}
+
+.gdlr-session-counter-item .gdlr-time {
+  display: block;
+  font-size: 350%;
+  font-weight: bold;
+  line-height: 1;
+  margin-bottom: 5px;
+}
+
+.gdlr-session-counter-item .gdlr-unit {
+  display: block;
+  font-weight: lighter;
+  text-transform: uppercase;
 }
