--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -1,57 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-	  <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <title>Perl Dancer Conference 2015 | Vienna Austria October 2015</title>
-    <meta name="author" content="Interchange6 development team">
-    <link rel='canonical' href='http://perl.dance/'>
-    <link rel='shortlink' href='http://perl.dance/'>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Montserrat%3Aregular%2C700&#038;subset=latin&#038;ver=4.2.2' type='text/css' media='all' />
-    <link media="all" type="text/css" href="//fonts.googleapis.com/css?family=Raleway%3A100%2C200%2C300%2Cregular%2C500%2C600%2C700%2C800%2C900&subset=latin&ver=4.2.2" rel="stylesheet">
-    <link rel="stylesheet" href="/css/site.css">
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <nav class="navbar navbar-default navbar-fixed-top normal" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/"><img src="/img/perl-dancer-2015-logo.png"></a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="menu-item"><a href="/">Home</a></li>
-            <li class="menu-item"><a href="/">Speakers</a></li>
-            <li class="menu-item"><a href="/">Schedule</a></li>
-            <li class="menu-item"><a href="/">Tickets</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<!--[if IE 7]><html class="ie ie7 ltie8 ltie9" lang="en-US"><![endif]-->
+<!--[if IE 8]><html class="ie ie8 ltie9" lang="en-US"><![endif]-->
+<!--[if !(IE 7) | !(IE 8)  ]><!-->
+<html lang="en-US">
+<!--<![endif]-->
 
-    <div class="content"></div>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="initial-scale=1.0" />	
+		
+	<!--link rel="pingback" href="/xmlrpc.php" /-->
+	<title>Perl Dancer Conference 2015 | Vienna Austria October 2015</title>
+<!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Feed" href="/?feed=rss2" /-->
+<!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Comments Feed" href="/?feed=comments-rss2" /-->
+<!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Homepage &#8211; new Comments Feed" href="/?feed=rss2&#038;page_id=3522" /-->
+    <script type="text/javascript">
+      window._wpemojiSettings = {"baseUrl":"http:\/\/s.w.org\/images\/core\/emoji\/72x72\/","ext":".png","source":{"concatemoji":"\/js\/wp-emoji-release.min.js"}};
+      !function(a,b,c){function d(a){var c=b.createElement("canvas"),d=c.getContext&&c.getContext("2d");return d&&d.fillText?(d.textBaseline="top",d.font="600 32px Arial","flag"===a?(d.fillText(String.fromCharCode(55356,56812,55356,56807),0,0),c.toDataURL().length>3e3):(d.fillText(String.fromCharCode(55357,56835),0,0),0!==d.getImageData(16,16,1,1).data[0])):!1}function e(a){var c=b.createElement("script");c.src=a,c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g;c.supports={simple:d("simple"),flag:d("flag")},c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.simple&&c.supports.flag||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
+    </script>
+    <style type="text/css">
+img.wp-smiley,
+img.emoji {
+  display: inline !important;
+  border: none !important;
+  box-shadow: none !important;
+  height: 1em !important;
+  width: 1em !important;
+  margin: 0 .07em !important;
+  vertical-align: -0.1em !important;
+  background: none !important;
+  padding: 0 !important;
+}
+</style>
+<link rel='stylesheet' href='/css/contact-form-7.css' type='text/css'>
+<link rel='stylesheet' href='/css/thekeynote-v1-05.css' type='text/css'>
+<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Raleway%3A100%2C200%2C300%2Cregular%2C500%2C600%2C700%2C800%2C900&#038;subset=latin&#038' type='text/css'>
+<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Montserrat%3Aregular%2C700&#038;subset=latin&#038' type='text/css'>
+<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Droid+Serif%3Aregular%2Citalic%2C700%2C700italic&#038;subset=latin&#038' type='text/css'>
+<link rel='stylesheet' href='/css/superfish.css' type='text/css'>
+<link rel='stylesheet' href='/css/dl-menu.css' type='text/css'>
+<link rel='stylesheet' href='/css/font-awesome.min.css' type='text/css'>
+<link rel='stylesheet' href='/css/jquery.fancybox.css' type='text/css'>
+<link rel='stylesheet' href='/css/thekeynote-responsive.css' type='text/css'>
+<link rel='stylesheet' href='/css/thekeynote-custom.css' type='text/css'>
+<link rel='stylesheet' href='/css/masterslider.main.css' type='text/css'>
+<link rel='stylesheet' href='/css/masterslider-custom.css' type='text/css'>
+<script src='//www.google.com/jsapi'></script>
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<!--link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" /-->
+<!--link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://perl.dance/wp-includes/wlwmanifest.xml" /--> 
+<link rel='canonical' href='http://perl.dance/'>
+<link rel='shortlink' href='http://perl.dance/'>
+<script>var ms_grabbing_curosr='/img/grabbing.cur',ms_grab_curosr='/img/grab.cur';</script>
+<!-- load the script for older ie version -->
+<!--[if lt IE 9]>
+<script src="/js/html5.js"></script>
+<script src="/js/excanvas.js"></script>
+<![endif]-->
+	<style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
 
-    <div class="footer">
-      <div class="copyright-container container">
-        <div class="copyright-left">
-          © Copyright 2015 Informa Studio Ltd. and Interchange Development Group, All Right Reserved
-        </div>
-      </div>
-    </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="/js/site.js"></script>
-  </body>
+
+</head>
+
+<body class="home page page-id-3522 page-template-default _masterslider _msp_version_2.14.2">
+<div class="body-wrapper  float-menu" data-home="/" >
+		<header class="gdlr-header-wrapper">
+		<!-- top navigation -->
+		
+		<!-- logo -->
+		<div class="gdlr-header-inner">
+			<div class="gdlr-header-container container">
+				<!-- logo -->
+				<div class="gdlr-logo">
+					<a href="/"><img src="/img/perl-dancer-2015-logo.png"></a>
+					<div class="gdlr-responsive-navigation dl-menuwrapper" id="gdlr-responsive-navigation" ><button class="dl-trigger">Open Menu</button><ul id="menu-main" class="dl-menu gdlr-main-mobile-menu"><li id="menu-item-3530" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3522 current_page_item menu-item-3530"><a href="/">Home</a></li>
+<li id="menu-item-3531" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3531"><a href="/?page_id=3210">Speakers</a></li>
+<li id="menu-item-3534" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3534"><a href="/?page_id=3254">Schedule</a></li>
+<li id="menu-item-3532" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3532"><a href="/?page_id=3278">Tickets</a></li>
+<li id="menu-item-3533" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3533"><a href="/?page_id=3344">Call For Papers!</a></li>
+</ul></div>				</div>
+
+				<!-- navigation -->
+				<div class="gdlr-navigation-wrapper"><nav class="gdlr-navigation" id="gdlr-main-navigation" role="navigation"><ul id="menu-main-1" class="sf-menu gdlr-main-menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3522 current_page_item menu-item-3530menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3522 current_page_item menu-item-3530 gdlr-normal-menu"><a href="/">Home</a></li>
+<li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3531menu-item menu-item-type-post_type menu-item-object-page menu-item-3531 gdlr-normal-menu"><a href="/?page_id=3210">Speakers</a></li>
+<li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3534menu-item menu-item-type-post_type menu-item-object-page menu-item-3534 gdlr-normal-menu"><a href="/?page_id=3254">Schedule</a></li>
+<li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3532menu-item menu-item-type-post_type menu-item-object-page menu-item-3532 gdlr-normal-menu"><a href="/?page_id=3278">Tickets</a></li>
+<li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3533menu-item menu-item-type-post_type menu-item-object-page menu-item-3533 gdlr-normal-menu"><a href="/?page_id=3344">Call For Papers!</a></li>
+</ul></nav>	
+<span class="gdlr-menu-search-button-sep">|</span>
+<i class="fa fa-search icon-search gdlr-menu-search-button" id="gdlr-menu-search-button" ></i>
+<div class="gdlr-menu-search" id="gdlr-menu-search">
+	<form method="get" id="searchform" action="/">
+				<div class="search-text">
+			<input type="text" value="Type Keywords" name="s" autocomplete="off" data-default="Type Keywords" />
+		</div>
+		<input type="submit" value="" />
+		<div class="clear"></div>
+	</form>	
+</div>		
+<div class="gdlr-navigation-gimmick" id="gdlr-navigation-gimmick"></div><div class="clear"></div></div>
+				<div class="clear"></div>
+			</div>
+		</div>
+		<div class="clear"></div>
+	</header>
+  <div id="gdlr-header-substitute" ></div>
+
+  <div class="content"></div>
+		
+	<footer class="footer-wrapper" >
+				
+				<div class="copyright-wrapper">
+			<div class="copyright-container container">
+				<div class="copyright-left">
+					© Copyright Informa Studio Ltd. and Interchange Development Group, All Right Reserved				</div>
+				<div class="copyright-right">
+									</div>
+				<div class="clear"></div>
+			</div>
+		</div>
+			</footer>
+	</div> <!-- body-wrapper -->
+<link rel='stylesheet' href='/css/google-map.css' type='text/css'>
+<script src='/js/jquery.form.min.js'></script>
+<script type='text/javascript'>
+/* <![CDATA[ */
+var _wpcf7 = {"loaderUrl":"\/img\/ajax-loader.gif","sending":"Sending ..."};
+/* ]]> */
+</script>
+<script src='/js/contact-form-7.js'></script>
+<script src='/js/superfish.js'></script>
+<script src='/js/hoverIntent.min.js'></script>
+<script src='/js/modernizr.custom.js'></script>
+<script src='/js/jquery.dlmenu.js'></script>
+<script src='/js/jquery.easing.js'></script>
+<script src='/js/jquery.fancybox.pack.js'></script>
+<script src='/js/jquery.fancybox-media.js'></script>
+<script src='/js/jquery.fancybox-thumbs.js'></script>
+<script src='/js/gdlr-script.js'></script>
+<script src='/js/site.js'></script>
+</body>
 </html>
