add speakers fragment and include it in / and /speakers

--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -32,31 +32,37 @@ if (typeof newsletter_check !== "function") {
 </div></div><div class="clear"></div><div class="clear"></div><div class="gdlr-item-title-wrapper gdlr-item pos-left "><div class="gdlr-item-title-head"><h3 class="gdlr-item-title gdlr-skin-title gdlr-skin-border gdlr-title-large">Speakers</h3><div class="clear"></div></div><div class="gdlr-item-title-divider"></div></div>
 
 <div class="speaker-item-wrapper">
+  <!-- NOTE: this is replaced with views/fragments/speakers.html -->
   <div class="speaker-item-holder gdlr-speaker-type-round">
+
     <div class="clear"></div>
 
-    <div class="three columns">
-      <div class="gdlr-item gdlr-speaker-item">
-        <div class="gdlr-ux gdlr-speaker-item-ux">
-          <div class="gdlr-speaker-thumbnail">
-            <img src="/img/people/sawyerx.png" alt="" width="300" height="300" />
-            <a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=sawyerx"><span class="gdlr-speaker-thumbnail-overlay" ></span></a>
-          </div>
-          <div class="gdlr-speaker-item-content">
-            <h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=sawyerx" >SawyerX</a></h3>
-            <div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" ><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</div>
+    <div class="speaker-row">
+
+      <div class="three columns speaker-item">
+        <div class="gdlr-item gdlr-speaker-item">
+          <div class="gdlr-ux gdlr-speaker-item-ux">
+            <div class="gdlr-speaker-thumbnail">
+              <img src="/img/people/sawyerx.png" alt="" width="300" height="300" />
+              <a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=sawyerx"><span class="gdlr-speaker-thumbnail-overlay" ></span></a>
+            </div>
+            <div class="gdlr-speaker-item-content">
+              <h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=sawyerx" ><span class="first_name">SawyerX</span> <span class="last_name"></span></a></h3>
+              <div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" ><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</div>
+            </div>
           </div>
         </div>
       </div>
+
+      <div class="three columns speaker-item"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/andrew-solomon.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=andrew-solomon" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=andrew-solomon" >Andrew Solomon</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Geekuni, London, United Kingdom</div></div></div></div></div>
+
+      <div class="three columns speaker-item"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/andrew-baerg.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=laurence-francis" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=laurence-francis" >Andrew Baerg</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >SOLE.com, Vancouver, Canada</div></div></div></div></div>
+
+      <div class="three columns speaker-item"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/stefan-hornburg.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=john-super-doe" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=john-super-doe" >Stefan Hornburg</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Linuxia, Hannover, Germany</div></div></div></div></div>
+
+      <div class="clear"></div>
     </div>
-
-<div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/andrew-solomon.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=andrew-solomon" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=andrew-solomon" >Andrew Solomon</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Geekuni, London, United Kingdom</div></div></div></div></div>
-
-<div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/andrew-baerg.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=laurence-francis" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=laurence-francis" >Andrew Baerg</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >SOLE.com, Vancouver, Canada</div></div></div></div></div>
-
-<div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/stefan-hornburg.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=john-super-doe" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=john-super-doe" >Stefan Hornburg</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Linuxia, Hannover, Germany</div></div></div></div></div>
-
-<div class="clear"></div>
+    <div class="speaker-row">
 
 <div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/peter-mottram.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=peter-mottram" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=peter-mottram" >Peter Mottram</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Sysnix Consultants, Qormi, Malta</div></div></div></div></div>
 
@@ -66,7 +72,8 @@ if (typeof newsletter_check !== "function") {
 
 <div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/sam-batschelet.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=sam-batschelet" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=sam-batschelet" >Sam Batschelet</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >West Branch Angler, New York, USA</div></div></div></div></div>
 
-    <div class="clear"></div>
+      <div class="clear"></div>
+    </div>
   </div>
 </div><!-- speaker-item-holder -->
 
