build main menu from nac data in db

--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -1,105 +1,4 @@
-body {
-  font-family: "Montserrat";
-  min-height: 2000px;
-  padding-top: 70px;
-}
-.navbar-nav {
-  font-family: "Raleway";
-  text-transform: uppercase;
-}
-.navbar-nav > ul > li > a {
-  color: #8e8e8e;
-}
-.normal {
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  transition: 0.5s;
-  background-color: #ffffff;
-  border-width: 0;
-}
-.normal .navbar-right {
-  padding-top: 12px;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  transition: 0.5s;
-  font-size: 11px;
-  font-weight: 800;
-  letter-spacing: 2px;
-}
-.normal .navbar-right > li:hover > a,
-.normal .navbar-right > li:current > a{
+.gdlr-main-menu>li>a.current-page {
   color: #0749bc;
-  opacity: 1
-}
-.navbar-brand {
-  padding: 0px !important;
-}
-.navbar-brand img {
-  max-height: 75px;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  transition: 0.5s;
-}
-.shrink {
-  height: 40px;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  transition: 0.5s;
-  background-color: #f8f8f8;
-}
-.shrink .navbar-right {
-  padding-top: 0px;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  transition: 0.5s;
-}
-.shrink .navbar-brand img {
-  max-height: 44px;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.gdlr-session-counter-item {
-  text-align: center;
-}
-
-.thumbnail {
-  background-color: #000;
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
-    color: #fff;
-}
-
-.gdlr-session-counter-item .session-counter-block.gdlr-block-day {
-    opacity: 0.95;
-}
-.gdlr-session-counter-item .session-counter-block {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
-    color: #fff;
-}
-.gdlr-session-counter-item .session-counter-block {
-    border-radius: 5px;
-    display: inline-block;
-    margin: 0 10px;
-    text-align: center;
-}
-
-.gdlr-session-counter-item .gdlr-time {
-  display: block;
-  font-size: 350%;
-  font-weight: bold;
-  line-height: 1;
-  margin-bottom: 5px;
-}
-
-.gdlr-session-counter-item .gdlr-unit {
-  display: block;
-  font-weight: lighter;
-  text-transform: uppercase;
+  opacity: 1;
 }
