--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -6,11 +6,11 @@
 <!--<![endif]-->
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="initial-scale=1.0" />	
-		
-	<!--link rel="pingback" href="/xmlrpc.php" /-->
-	<title>Perl Dancer Conference 2015 | Vienna Austria October 2015</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="initial-scale=1.0" />  
+    
+  <!--link rel="pingback" href="/xmlrpc.php" /-->
+  <title>Perl Dancer Conference 2015 | Vienna Austria October 2015</title>
 <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Feed" href="/?feed=rss2" /-->
 <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Comments Feed" href="/?feed=comments-rss2" /-->
 <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Homepage &#8211; new Comments Feed" href="/?feed=rss2&#038;page_id=3522" /-->
@@ -45,6 +45,7 @@ img.emoji {
 <link rel='stylesheet' href='/css/thekeynote-custom.css' type='text/css'>
 <link rel='stylesheet' href='/css/masterslider.main.css' type='text/css'>
 <link rel='stylesheet' href='/css/masterslider-custom.css' type='text/css'>
+<link rel='stylesheet' href='/css/site.css' type='text/css'>
 <script src='//www.google.com/jsapi'></script>
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -58,71 +59,86 @@ img.emoji {
 <script src="/js/html5.js"></script>
 <script src="/js/excanvas.js"></script>
 <![endif]-->
-	<style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
+  <style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
 
 
 
 </head>
 
 <body class="home page page-id-3522 page-template-default _masterslider _msp_version_2.14.2">
-<div class="body-wrapper  float-menu" data-home="/" >
-		<header class="gdlr-header-wrapper">
-		<!-- top navigation -->
-		
-		<!-- logo -->
-		<div class="gdlr-header-inner">
-			<div class="gdlr-header-container container">
-				<!-- logo -->
-				<div class="gdlr-logo">
-					<a href="/"><img src="/img/perl-dancer-2015-logo.png"></a>
-					<div class="gdlr-responsive-navigation dl-menuwrapper" id="gdlr-responsive-navigation" ><button class="dl-trigger">Open Menu</button><ul id="menu-main" class="dl-menu gdlr-main-mobile-menu"><li id="menu-item-3530" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3522 current_page_item menu-item-3530"><a href="/">Home</a></li>
-<li id="menu-item-3531" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3531"><a href="/?page_id=3210">Speakers</a></li>
-<li id="menu-item-3534" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3534"><a href="/?page_id=3254">Schedule</a></li>
-<li id="menu-item-3532" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3532"><a href="/?page_id=3278">Tickets</a></li>
-<li id="menu-item-3533" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3533"><a href="/?page_id=3344">Call For Papers!</a></li>
-</ul></div>				</div>
+  <div class="body-wrapper float-menu" data-home="/">
 
-				<!-- navigation -->
-				<div class="gdlr-navigation-wrapper"><nav class="gdlr-navigation" id="gdlr-main-navigation" role="navigation"><ul id="menu-main-1" class="sf-menu gdlr-main-menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3522 current_page_item menu-item-3530menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3522 current_page_item menu-item-3530 gdlr-normal-menu"><a href="/">Home</a></li>
-<li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3531menu-item menu-item-type-post_type menu-item-object-page menu-item-3531 gdlr-normal-menu"><a href="/?page_id=3210">Speakers</a></li>
-<li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3534menu-item menu-item-type-post_type menu-item-object-page menu-item-3534 gdlr-normal-menu"><a href="/?page_id=3254">Schedule</a></li>
-<li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3532menu-item menu-item-type-post_type menu-item-object-page menu-item-3532 gdlr-normal-menu"><a href="/?page_id=3278">Tickets</a></li>
-<li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3533menu-item menu-item-type-post_type menu-item-object-page menu-item-3533 gdlr-normal-menu"><a href="/?page_id=3344">Call For Papers!</a></li>
-</ul></nav>	
-<span class="gdlr-menu-search-button-sep">|</span>
-<i class="fa fa-search icon-search gdlr-menu-search-button" id="gdlr-menu-search-button" ></i>
-<div class="gdlr-menu-search" id="gdlr-menu-search">
-	<form method="get" id="searchform" action="/">
-				<div class="search-text">
-			<input type="text" value="Type Keywords" name="s" autocomplete="off" data-default="Type Keywords" />
-		</div>
-		<input type="submit" value="" />
-		<div class="clear"></div>
-	</form>	
-</div>		
-<div class="gdlr-navigation-gimmick" id="gdlr-navigation-gimmick"></div><div class="clear"></div></div>
-				<div class="clear"></div>
-			</div>
-		</div>
-		<div class="clear"></div>
-	</header>
-  <div id="gdlr-header-substitute" ></div>
+    <header class="gdlr-header-wrapper">
+      <!-- top navigation -->
+    
+      <!-- logo -->
+      <div class="gdlr-header-inner">
+        <div class="gdlr-header-container container">
+          <!-- logo -->
 
-  <div class="content"></div>
-		
-	<footer class="footer-wrapper" >
-				
-				<div class="copyright-wrapper">
-			<div class="copyright-container container">
-				<div class="copyright-left">
-					© Copyright Informa Studio Ltd. and Interchange Development Group, All Right Reserved				</div>
-				<div class="copyright-right">
-									</div>
-				<div class="clear"></div>
-			</div>
-		</div>
-			</footer>
-	</div> <!-- body-wrapper -->
+          <div class="gdlr-logo">
+            <a href="/"><img src="/img/perl-dancer-2015-logo.png"></a>
+            <div class="gdlr-responsive-navigation dl-menuwrapper" id="gdlr-responsive-navigation" ><button class="dl-trigger">Open Menu</button>
+              <ul id="menu-main" class="menu-main dl-menu gdlr-main-mobile-menu">
+                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item current_page_item"><a href="/">Home</a></li>
+                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Speakers</a></li>
+                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Schedule</a></li>
+                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Tickets</a></li>
+                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Call For Papers!</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- navigation -->
+          <div class="gdlr-navigation-wrapper">
+            <nav class="gdlr-navigation" id="gdlr-main-navigation" role="navigation">
+              <ul id="menu-main-1" class="menu-main sf-menu gdlr-main-menu">
+                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Home</a></li>
+                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Speakers</a></li>
+                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Schedule</a></li>
+                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Tickets</a></li>
+                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Call For Papers!</a></li>
+              </ul>
+            </nav>  
+            <span class="gdlr-menu-search-button-sep">|</span>
+            <i class="fa fa-search icon-search gdlr-menu-search-button" id="gdlr-menu-search-button" ></i>
+
+            <div class="gdlr-menu-search" id="gdlr-menu-search">
+              <form method="get" id="searchform" action="/">
+                <div class="search-text">
+                  <input type="text" value="Type Keywords" name="s" autocomplete="off" data-default="Type Keywords" />
+                </div>
+                <input type="submit" value="" />
+                <div class="clear"></div>
+              </form> 
+            </div>    
+
+            <div class="gdlr-navigation-gimmick" id="gdlr-navigation-gimmick"></div>
+            <div class="clear"></div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </header>
+    <div id="gdlr-header-substitute" ></div>
+
+    <div class="content"></div>
+    
+    <footer class="footer-wrapper" >
+      <div class="copyright-wrapper">
+        <div class="copyright-container container">
+          <div class="copyright-left">
+            © Copyright Informa Studio Ltd. and Interchange Development Group, All Right Reserved
+          </div>
+          <div class="copyright-right"></div>
+          <div class="clear"></div>
+        </div>
+      </div>
+    </footer>
+
+  </div> <!-- body-wrapper -->
+
 <link rel='stylesheet' href='/css/google-map.css' type='text/css'>
 <script src='/js/jquery.form.min.js'></script>
 <script type='text/javascript'>
