remove speakers list from / and /speakers and use fragment

--- a/PerlDance/views/speakers.html
+++ b/PerlDance/views/speakers.html
@@ -8,14 +8,35 @@
 
 <div class="content-wrapper">
   <div class="gdlr-content">
+    <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
 
-    <!-- Sidebar With Content Section-->
-    <div class="with-sidebar-wrapper gdlr-type-no-sidebar"><section id="content-section-1" ><div class="gdlr-color-wrapper  gdlr-show-all no-skin" style="background-color: #f5f5f5; padding-bottom: 50px; " ><div class="container"><div class="gdlr-feature-media-ux gdlr-ux"><div class="gdlr-item gdlr-feature-media-item gdlr-left" ><div class="feature-media-thumbnail gdlr-image"></div><div class="feature-media-content-wrapper"><div class="feature-media-content"><p>Our impressive list of global thinkers leaves no doubt. Perl Dancer 2015 is a must. Even if you are not a Perl Hacker, our speakers will share knowledge useful to anyone working as a web developer. Don&#8217;t miss the opportunity to meet them.</p>
-</div></div></div></div><div class="clear"></div><div class="clear"></div></div></div><div class="clear"></div></section><section id="content-section-2" ><div class="section-container container"><div class="speaker-item-wrapper"  style="margin-bottom: 35px;"  ><div class="speaker-item-holder gdlr-speaker-type-round"><div class="clear"></div><div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="http://perl.dance/wp-content/uploads/2014/06/sawyer.gif" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=sawyerx" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=sawyerx" >SawyerX</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Booking.com, Amsterdam, Netherlands</div></div></div></div></div><div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="http://perl.dance/wp-content/uploads/2015/06/Untitled-1.gif" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=andrew-solomon" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=andrew-solomon" >Andrew Solomon</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Geekuni, London, United Kingdom</div></div></div></div></div><div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="http://perl.dance/wp-content/uploads/2014/12/3a44771-300x300.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=laurence-francis" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=laurence-francis" >Andrew Baerg</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >SOLE.com, Vancouver, Canada</div></div></div></div></div><div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="http://perl.dance/wp-content/uploads/2014/12/Untitled-1.gif" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=john-super-doe" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=john-super-doe" >Stefan Hornburg</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Linuxia, Hannover, Germany</div></div></div></div></div><div class="clear"></div><div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="http://perl.dance/wp-content/uploads/2015/06/2750b9d2-300x300.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=peter-mottram" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=peter-mottram" >Peter Mottram</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >IBM, Malta</div></div></div></div></div><div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="http://perl.dance/wp-content/uploads/2015/06/Untitled-11.gif" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=jure-kodzoman" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=jure-kodzoman" >Jure Kodzoman</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Informa Studio Ltd., Split, Croatia</div></div></div></div></div><div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="http://perl.dance/wp-content/uploads/2015/06/2750b9d-300x300.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=grega-pompe" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=grega-pompe" >Grega Pompe</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Informa Studio Ltd., Ljubljana, Slovenia</div></div></div></div></div><div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="http://perl.dance/wp-content/uploads/2015/06/2750b9d1-300x300.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=sam-batschelet" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=sam-batschelet" >Sam Batschelet</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >West Branch Angler, New York, USA</div></div></div></div></div><div class="clear"></div></div></div><div class="clear"></div></div></section></div>
-    
-    <!-- Below Sidebar Section-->
-    
-    
+      <section id="content-section-1" >
+        <div class="gdlr-color-wrapper  gdlr-show-all no-skin" style="background-color: #f5f5f5; padding-bottom: 50px; " >
+          <div class="container">
+            <div class="gdlr-feature-media-ux gdlr-ux">
+              <div class="gdlr-item gdlr-feature-media-item gdlr-left" >
+                <div class="feature-media-thumbnail gdlr-image"></div>
+                <div class="feature-media-content-wrapper">
+                  <div class="feature-media-content"><p>Our impressive list of global thinkers leaves no doubt. Perl Dancer 2015 is a must. Even if you are not a Perl Hacker, our speakers will share knowledge useful to anyone working as a web developer. Don't miss the opportunity to meet them.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="clear"></div>
+            <div class="clear"></div>
+          </div>
+        </div>
+        <div class="clear"></div>
+      </section>
+        
+      <section id="content-section-2" >
+        <div class="section-container container">
+          <div class="speaker-item-wrapper"  style="margin-bottom: 35px;"  >
+            <!-- fragments/speakers.html -->
+          </div>
+        </div>
+      </section>
+    </div>
   </div><!-- gdlr-content -->
-    <div class="clear" ></div>
-  </div><!-- content wrapper -->
+  <div class="clear" ></div>
+</div><!-- content wrapper -->
