complete initial rehack of speaker view

--- a/PerlDance/views/speaker.html
+++ b/PerlDance/views/speaker.html
@@ -1,46 +1,42 @@
-      <div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal"  data-bgspeed="0.5" >
-      <div class="gdlr-page-title-overlay"></div>
-      <div class="gdlr-page-title-container container" >
-        <h1 class="gdlr-page-title">SawyerX</h1>
-                <span class="gdlr-page-caption">Booking.com, Amsterdam, Netherlands</span>
-              </div>  
-    </div>  
-    <!-- is search -->  <div class="content-wrapper"><div class="gdlr-content">
-
+<div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal"  data-bgspeed="0.5" >
+  <div class="gdlr-page-title-overlay"></div>
+  <div class="gdlr-page-title-container container">
+    <h1 class="gdlr-page-title name">SawyerX</h1>
+    <span class="gdlr-page-caption"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></span>
+  </div>  
+</div>  
+<div class="content-wrapper">
+  <div class="gdlr-content">
     <div class="with-sidebar-wrapper">
-    <div class="with-sidebar-container container gdlr-class-no-sidebar">
-      <div class="with-sidebar-left twelve columns">
-        <div class="with-sidebar-content twelve columns">
-          <div class="gdlr-item gdlr-item-start-content">
-            <div id="speaker-3547" class="post-3547 speaker type-speaker status-publish has-post-thumbnail hentry speaker_category-the-keynote">
-              <div class="gdlr-speaker-info-wrapper">
-                <div class="gdlr-speaker-thumbnail"><a href="http://perl.dance/wp-content/uploads/2014/06/sawyer.gif" data-rel="fancybox" ><img src="http://perl.dance/wp-content/uploads/2014/06/sawyer.gif" alt="" width="300" height="300" /></a></div>                
-                <div class="gdlr-speaker-info-inner">
-                  <h4 class="gdlr-speaker-name">SawyerX</h4>
-                  <div class="gdlr-speaker-position">Booking.com, Amsterdam, Netherlands</div>
-                  
-                                  </div>                
-              </div>                
-              <div class="gdlr-speaker-content-wrapper">
-                <h4 class="gdlr-speaker-biography-title">Biography</h4>
-                <div class="gdlr-speaker-content">
-                <p>One of the Dancer authors and a great speaker, SawyerX is joining us this year in Vienna. Along with Andrew Solomon he is giving a Dancer training on the first day of the conference, along with a talk on one of the conference days. Sawyer is very easy to listen to, and this is an exceptional opportunity to attend training from the guy who not only wrote Dancer, but is also really good at explaining things.</p>
-                </div>
-                
-                              </div>      
-              <div class="clear"></div>
-            </div><!-- #speaker -->
-            
-          </div><!-- gdlr-item-start-content -->
+      <div class="with-sidebar-container container gdlr-class-no-sidebar">
+        <div class="with-sidebar-left twelve columns">
+          <div class="with-sidebar-content twelve columns">
+            <div class="gdlr-item gdlr-item-start-content">
+              <div id="speaker-3547" class="post-3547 speaker type-speaker status-publish has-post-thumbnail hentry speaker_category-the-keynote">
+                <div class="gdlr-speaker-info-wrapper">
+                  <div class="gdlr-speaker-thumbnail">
+                    <img class="photo" src="" alt="" width="300" height="300" />
+                  </div>                
+                  <div class="gdlr-speaker-info-inner">
+                    <h4 class="gdlr-speaker-name name">SawyerX</h4>
+                    <div class="gdlr-speaker-position"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></div>
+                  </div>                
+                </div>                
+                <div class="gdlr-speaker-content-wrapper">
+                  <h4 class="gdlr-speaker-biography-title">Biography</h4>
+                  <div class="gdlr-speaker-content">
+                    <p class="bio">One of the Dancer authors and a great speaker, SawyerX is joining us this year in Vienna. Along with Andrew Solomon he is giving a Dancer training on the first day of the conference, along with a talk on one of the conference days. Sawyer is very easy to listen to, and this is an exceptional opportunity to attend training from the guy who not only wrote Dancer, but is also really good at explaining things.</p>
+                  </div>
+                </div>      
+                <div class="clear"></div>
+              </div><!-- #speaker -->
+            </div><!-- gdlr-item-start-content -->
+          </div>
+          <div class="clear"></div>
         </div>
-        
         <div class="clear"></div>
-      </div>
-      
-      <div class="clear"></div>
+      </div>        
     </div>        
-  </div>        
-
-</div><!-- gdlr-content -->
-    <div class="clear" ></div>
-  </div><!-- content wrapper -->
+  </div><!-- gdlr-content -->
+  <div class="clear" ></div>
+</div><!-- content wrapper -->
