--- a/PerlDance/views/speaker.xml
+++ b/PerlDance/views/speaker.xml
@@ -1,2 +1,9 @@
 <specification>
+  <value name="name" field="user.name"/>
+  <value name="company" field="user.addresses.first.company"/>
+  <value name="city" field="user.addresses.first.city"/>
+  <value name="country" field="user.addresses.first.country.name"/>
+  <value name="photo" target="src" field="user.photo.uri"/>
+  <value name="bio" field="user.bio"/>
+  <value name="pause_id" field="user.pause_id"/>
 </specification>
