add new body_class token to ape old wp nastiness

--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -65,7 +65,7 @@ img.emoji {
 
 </head>
 
-<body class="home page page-id-3522 page-template-default _masterslider _msp_version_2.14.2">
+<body class="_body_ page-template-default _masterslider _msp_version_2.14.2">
   <div class="body-wrapper float-menu" data-home="/">
 
     <header class="gdlr-header-wrapper">
