--- a/PerlDance/views/speaker.html
+++ b/PerlDance/views/speaker.html
@@ -1,10 +1,11 @@
 <div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal"  data-bgspeed="0.5" >
   <div class="gdlr-page-title-overlay"></div>
-  <div class="gdlr-page-title-container container">
-    <h1 class="gdlr-page-title name">SawyerX</h1>
+  <div class="gdlr-page-title-container container" >
+    <h1 class="gdlr-page-title name">Andrew Solomon</h1>
     <span class="gdlr-page-caption"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></span>
   </div>  
 </div>  
+
 <div class="content-wrapper">
   <div class="gdlr-content">
     <div class="with-sidebar-wrapper">
@@ -12,31 +13,49 @@
         <div class="with-sidebar-left twelve columns">
           <div class="with-sidebar-content twelve columns">
             <div class="gdlr-item gdlr-item-start-content">
-              <div id="speaker-3547" class="post-3547 speaker type-speaker status-publish has-post-thumbnail hentry speaker_category-the-keynote">
+              <div class="speaker type-speaker status-publish has-post-thumbnail hentry speaker_category-the-keynote">
                 <div class="gdlr-speaker-info-wrapper">
                   <div class="gdlr-speaker-thumbnail">
-                    <img class="photo" src="" alt="" width="300" height="300" />
+                    <img class="photo" src="/img/people/peter-mottram.jpg" alt="" width="300" height="300">
                   </div>                
                   <div class="gdlr-speaker-info-inner">
-                    <h4 class="gdlr-speaker-name name">SawyerX</h4>
+                    <h4 class="gdlr-speaker-name name">Andrew Solomon</h4>
                     <div class="gdlr-speaker-position"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></div>
                   </div>                
                 </div>                
                 <div class="gdlr-speaker-content-wrapper">
                   <h4 class="gdlr-speaker-biography-title">Biography</h4>
                   <div class="gdlr-speaker-content">
-                    <p class="bio">One of the Dancer authors and a great speaker, SawyerX is joining us this year in Vienna. Along with Andrew Solomon he is giving a Dancer training on the first day of the conference, along with a talk on one of the conference days. Sawyer is very easy to listen to, and this is an exceptional opportunity to attend training from the guy who not only wrote Dancer, but is also really good at explaining things.</p>
+                    <p class="bio">Software developer and project leader with over 15 years experience. Applications include algebraic and optimisation algorithms, web services and virtual machines in Perl, Java and C within a Unix environment. Managing projects using both in-house and contract developers.</p>
+                  </div>
+                  <h4 class="gdlr-speaker-session-title">All session by <span class="name">Andrew Solomon</span></h4>
+                  <div class="gdlr-speaker-session-wrapper">
+                    <div class="six columns">
+                      <div class="gdlr-speaker-session-item gdlr-item">
+                        <h4 class="speaker-session-item-title"><a href="/talks/">Web Development using Dancer</a></h4>
+                        <div class="gdlr-session-info">
+                          <div class="session-info session-time">
+                            <i class="fa fa-clock-o" ></i>09:00 - 13:00
+                          </div>
+                          <div class="session-info session-location">
+                            <i class="fa fa-location-arrow" ></i>Amerikahaus
+                          </div>
+                          <div class="clear"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="clear"></div>
                   </div>
                 </div>      
                 <div class="clear"></div>
-              </div><!-- #speaker -->
-            </div><!-- gdlr-item-start-content -->
+              </div>
+            </div>
           </div>
           <div class="clear"></div>
         </div>
         <div class="clear"></div>
       </div>        
     </div>        
-  </div><!-- gdlr-content -->
+  </div>
   <div class="clear" ></div>
-</div><!-- content wrapper -->
+</div>
