--- a/PerlDance/views/speaker.html
+++ b/PerlDance/views/speaker.html
@@ -28,14 +28,16 @@
                   <div class="gdlr-speaker-content">
                     <p class="bio">Software developer and project leader with over 15 years experience. Applications include algebraic and optimisation algorithms, web services and virtual machines in Perl, Java and C within a Unix environment. Managing projects using both in-house and contract developers.</p>
                   </div>
-                  <h4 class="gdlr-speaker-session-title">All session by <span class="name">Andrew Solomon</span></h4>
+                  <div class="has_talks">
+                    <h4 class="gdlr-speaker-session-title">Talks by <span class="name">Andrew Solomon</span></h4>
+                  </div>
                   <div class="gdlr-speaker-session-wrapper">
                     <div class="six columns">
-                      <div class="gdlr-speaker-session-item gdlr-item">
-                        <h4 class="speaker-session-item-title"><a href="/talks/">Web Development using Dancer</a></h4>
+                      <div class="gdlr-speaker-session-item gdlr-item talks">
+                        <h4 class="speaker-session-item-title title"><a class="talk-link" href="/talks/">Web Development using Dancer</a></h4>
                         <div class="gdlr-session-info">
                           <div class="session-info session-time">
-                            <i class="fa fa-clock-o" ></i>09:00 - 13:00
+                            <i class="fa fa-clock-o" ></i><span class="start_time"></span> <span class="duration_display">09:00 - 13:00</span>
                           </div>
                           <div class="session-info session-location">
                             <i class="fa fa-location-arrow" ></i>Amerikahaus
