--- a/PerlDance/views/speaker.xml
+++ b/PerlDance/views/speaker.xml
@@ -6,4 +6,11 @@
   <value name="photo" target="src" field="user.photo.uri"/>
   <value name="bio" field="user.bio"/>
   <value name="pause_id" field="user.pause_id"/>
+  <container name="has_talks" value="has_talks"/>
+  <list name="talks" iterator="user.talks_authored">
+    <param name="talk-link" target="href" op="append" field="id"/>
+    <param name="title"/>
+    <param name="start_time" filter="date_only"/>
+    <param name="duration_display"/>
+  </list>
 </specification>
