use seo_uri method in views

--- a/PerlDance/views/speaker.xml
+++ b/PerlDance/views/speaker.xml
@@ -8,7 +8,7 @@
   <value name="pause_id" field="user.pause_id"/>
   <container name="has_talks" value="has_talks"/>
   <list name="talks" iterator="user.talks_authored">
-    <param name="talk-link" target="href" op="append" field="id"/>
+    <param name="talk-link" target="href" op="append" field="seo_uri"/>
     <param name="title"/>
     <param name="start_time" filter="date_only"/>
     <param name="duration_display"/>
