small change to /talks

--- a/PerlDance/views/talks.html
+++ b/PerlDance/views/talks.html
@@ -27,7 +27,7 @@
                   <div class="gdlr-session-item-content-info">
                     <div class="gdlr-session-info">
                       <div class="session-info session-time">
-                        <i class="fa fa-clock-o" ></i><span class="start_time">07:00</span> - <span class="end_time">11:00</span>
+                        <i class="fa fa-clock-o" ></i><span class="duration_display"></span>
                       </div>
                       <div class="session-info session-location">
                         <i class="fa fa-location-arrow" ></i>Location
