--- a/PerlDance/views/talks.xml
+++ b/PerlDance/views/talks.xml
@@ -3,8 +3,7 @@
     <param name="gdlr-session-head-day" field="day"/>
     <param name="gdlr-session-head-date" field="date" filter="date_only"/>
     <list name="talks" iterator="talks" class="scheduled-talk">
-      <param name="start_time" filter="time_only"/>
-      <param name="end_time" filter="time_only"/>
+      <param name="duration_display"/>
       <param name="speaker-name" class="speaker-link" field="author.name"/>
       <param name="speaker-link" target="href" op="append" field="author.uri"/>
       <param name="talk-title" class="talk-link" field="title"/>
