fixup one of the speakers links in /talks

--- a/PerlDance/views/talks.html
+++ b/PerlDance/views/talks.html
@@ -37,7 +37,7 @@
                           <i class="fa fa-user" ></i>
                           <div class="session-speaker-list">
                             <div class="session-speaker-list-item">
-                              <a class="speaker-link" href="/speaker/" >Speaker Name</a>
+                              <a class="speaker-link" href="/speakers/" >Speaker Name</a>
                             </div>
                           </div>
                         </div>
