add 'add_jacascript' sub to add js files to layout

--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -157,5 +157,6 @@ var _wpcf7 = {"loaderUrl":"\/img\/ajax-loader.gif","sending":"Sending ..."};
 <script src='/js/jquery.fancybox-thumbs.js'></script>
 <script src='/js/gdlr-script.js'></script>
 <script src='/js/site.js'></script>
+<div class='extra-js'><script class='file' src='/js/'></script></div>
 </body>
 </html>
