remove style from index.html

--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -4,10 +4,20 @@
   opacity: 1;
 }
 /* amerikahaus map */
+#wgmpmap {
+  width:100%;
+  height:200px;
+}
 #wgmpmap img {max-width: none;}
 /* misc stuff */
 .recentcomments a{
   display:inline !important;
   padding:0 !important;
   margin:0 !important;
+}
+.gdlr-session-counter-item {
+  margin-bottom: 10px;
+}
+.gdlr-subscribe-item {
+  margin-bottom: 10px;
 }
