--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -11,11 +11,11 @@
             </div>
           </div>
           <div class="clear"></div>
-          <div class="gdlr-session-counter-item gdlr-item" style="margin-bottom: 10px;">
+          <div class="gdlr-session-counter-item gdlr-item">
             <!-- countdown fragment -->
           </div>
           <div class="clear"></div>
-          <div class="gdlr-subscribe-item gdlr-item" style="margin-bottom: 10px;">
+          <div class="gdlr-subscribe-item gdlr-item">
             <h4 class="gdlr-subscribe-title">Subscribe for updates</h4>
             <div class="gdlr-newsletter-subscribe">
               <div class="newsletter newsletter-subscription">
@@ -55,7 +55,7 @@
                 <i class="fa fa-location-arrow" ></i>2 Friedrich-Schmidt-Platz, 1010 Wien, Austria
               </div>
             </div>
-            <div id=wgmpmap style="width:100%; height:200px;"></div>
+            <div id="wgmpmap"></div>
           </div>
           <div class="clear"></div>
           <div class="gdlr-item-title-wrapper gdlr-item pos-left ">
