remove style from html

--- a/PerlDance/views/speakers.html
+++ b/PerlDance/views/speakers.html
@@ -11,7 +11,7 @@
     <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
 
       <section id="content-section-1" >
-        <div class="gdlr-color-wrapper  gdlr-show-all no-skin" style="background-color: #f5f5f5; padding-bottom: 50px; " >
+        <div class="color-wrapper-speakers gdlr-color-wrapper  gdlr-show-all no-skin">
           <div class="container">
             <div class="gdlr-feature-media-ux gdlr-ux">
               <div class="gdlr-item gdlr-feature-media-item gdlr-left" >
@@ -31,7 +31,7 @@
         
       <section id="content-section-2" >
         <div class="section-container container">
-          <div class="speaker-item-wrapper"  style="margin-bottom: 35px;"  >
+          <div class="speaker-item-wrapper">
             <!-- fragments/speakers.html -->
           </div>
         </div>
