--- a/PerlDance/views/talks.html
+++ b/PerlDance/views/talks.html
@@ -11,8 +11,7 @@
     <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
       <section id="content-section-1" >
         <div class="section-container container">
-          <div class="session-item-wrapper"  style="margin-bottom: 75px;"  >
-
+          <div class="session-item-wrapper margin-bottom-75">
             <div class="gdlr-session-item gdlr-tab-session-item gdlr-item" >
               <div class="gdlr-session-item-head">
                 <div class="gdlr-session-item-head-info gdlr-active" data-tab="gdlr-tab-1">
