--- a/PerlDance/views/tickets.html
+++ b/PerlDance/views/tickets.html
@@ -10,7 +10,7 @@
   <div class="gdlr-content">
     <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
       <section id="content-section-1" >
-        <div class="gdlr-color-wrapper  gdlr-show-all no-skin" style="background-color: #ffffff; padding-top: 40px; padding-bottom: 20px; ">
+        <div class="color-wrapper-tickets gdlr-color-wrapper  gdlr-show-all no-skin">
           <div class="container">
             <div class="ticket-item-wrapper"  >
               <!-- tickets fragment -->
