--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -21,3 +21,28 @@
 .gdlr-subscribe-item {
   margin-bottom: 10px;
 }
+.color-wrapper-cfp {
+  background-color: #2d2d2d;
+  padding-top: 90px;
+}
+.color-wrapper-speakers {
+  background-color: #f5f5f5;
+  padding-bottom: 50px;
+}
+.speaker-item-wrapper {
+  margin-bottom: 35px;
+}
+.color-wrapper-tickets {
+  background-color: #ffffff;
+  padding-bottom: 20px;
+  padding-top: 40px;
+}
+.margin-bottom-30 {
+  margin-bottom: 30px;
+}
+.margin-bottom-75 {
+  margin-bottom: 75px;
+}
+.display-none {
+  display:none;
+}
