--- a/PerlDance/views/cfp.html
+++ b/PerlDance/views/cfp.html
@@ -10,11 +10,11 @@
   <div class="gdlr-content">
     <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
       <section id="content-section-1">
-        <div class="gdlr-color-wrapper gdlr-show-all gdlr-skin-stunning-text" style="background-color: #2d2d2d; padding-top: 90px;">
+        <div class="color-wrapper-cfp gdlr-color-wrapper gdlr-show-all gdlr-skin-stunning-text">
           <div class="container">
             <div class="eight columns">
               <div class="gdlr-stunning-text-ux gdlr-ux">
-                <div class="gdlr-item gdlr-stunning-text-item type-normal"  style="margin-bottom: 30px;" >
+                <div class="margin-bottom-30 gdlr-item gdlr-stunning-text-item type-normal">
                   <h2 class="stunning-text-title">Ready To Submit Your Paper?</h2>
                   <div class="stunning-text-caption gdlr-skin-content">
                     <p>All full paper submissions will be peer reviewed and evaluated based on originality, technical and/or research content/depth, correctness, relevance to conference, contributions, and readability. English is the official language of the conference. We welcome paper submissions.</p>
@@ -27,7 +27,7 @@
                 <div role="form" class="wpcf7" id="wpcf7-f3360-o1" lang="en-US" dir="ltr">
                   <div class="screen-reader-response"></div>
                   <form name="" action="/?page_id=3344#wpcf7-f3360-o1" method="post" class="wpcf7-form" novalidate="novalidate">
-                    <div style="display: none;">
+                    <div class="display-none">
                       <input type="hidden" name="_wpcf7" value="3360" />
                       <input type="hidden" name="_wpcf7_version" value="4.1.2" />
                       <input type="hidden" name="_wpcf7_locale" value="en_US" />
